# harpi

./: .gitignore  README.md
arduino/: meson.build
arduino/main/: Buzzer.cpp  Buzzer.hpp  FakeTagFinder.hpp  Harpi.cpp  Harpi.hpp  Led.cpp  Led.hpp  Motor.cpp  Motor.hpp  Sound.hpp  Switch.cpp  Switch.hpp  TagFinder.cpp  TagFinder.hpp  UltraSound.cpp  UltraSound.hpp  Utils.cpp  Utils.hpp  main.ino
arduino/main/fake/: Adafruit_NeoPixel.cpp  Adafruit_NeoPixel.h  Arduino.h  HardwareSerial.h  esp32-hal-ledc.cpp  esp32-hal-ledc.h
arduino/main/test/: Test.Buzzer.cpp  Test.Led.cpp
raspberry/: main.py
raspberry/deploy/: fabfile.py  requirements.txt
raspberry/deploy/remote/home/pi/dev/orwell/: main.py
